--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.0.33.Final</version>
+    <version>4.0.34.Final-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-handler</artifactId>
